cambio de titulo

--- a/Restaurante.html
+++ b/Restaurante.html
@@ -36,6 +36,7 @@
             </svg></div>
     </div>
     <script src="scriot.js"></script>
+    <h1>usanndo git hub y git hub page</h1>
 </body>
 
 </html>
